# chihlee_python

./: AGENT.md  README.md  pyproject.toml
0516_class/: lesson2.ipynb
0523/: lesson1.ipynb  pyproject.toml
0530/: lesson1.ipynb  lesson1.py  lesson3.py  lesson4.ipynb  lesson5.ipynb  lesson7.ipynb  lesson8.ipynb
0606/: YouBike_Live_Report.csv  lesson1.py  lesson2.py  lesson3.py  lesson3_1.py  lesson4.py  lesson5.py
0613/: YouBike_Live_Report.csv  lesson1_1.ipynb  lesson2.py  lesson4.ipynb  lesson4_1.ipynb  lesson6.py
0627/: lesson1.ipynb  lesson1.md  lesson2.ipynb  lesson2.md  lesson2.py  lesson3.ipynb  lesson3.md  lesson3.py  lesson_ap1.py  prac1.ipynb  pyproject.toml
