[project]
name = "chihlee-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "0523",
    "0627",
]
